# RE_search

./: .gitattributes  .gitignore  ARCHITECTURE.md  README.md  conftest.py  pyproject.toml
deliverables/: README.md  Spottiswoode_18-03_Valuation_Report.html  build_cardiff_report.py  build_condo_report.py  build_condo_v2_report.py  build_condo_valuation_report.py  build_factor_report.py  build_landed_area_report.py  build_landed_dd_report.py  build_landed_full_report.py  build_landed_report.py  build_landed_v2_report.py  build_landed_valuation_report.py  build_nanyang_freehold_overview.py  build_newlaunch_report.py  build_report.py  build_yield_ladder_memo.py  cardiff_grove_19_Landed_Valuation_Report.html  charts.py  report_out.py  seletar_green_walk_14_DD_Report.html
research/: __init__.py  analyze_landed.py  analyze_r3.py  audit_landed.py  audit_ura.py  build_factor_panel.py  calibrate_landed_guidance.py  cardiff19_valuation.json  diagnose_l2b.py  doctor.py  fit_elasticity.py  fit_floor_premium.py  fit_land_size_curve.py  gallop_comps.json  gallop_profitability.json  gallop_rents.json  gallop_towerview.json  harvest_nearby.py  harvest_profitability.py  harvest_rent.py  harvest_sale.py  harvest_street_sale.py  harvest_towerview.py  landed_noise_floor.py  mbx.py  onepearl_profitability.json  onepearl_towerview.json  onepearl_transactions.json  parcesta_nearby.json  reconcile_is_ura.py  reconstruct_comps.py  run_l2b_variants.py  run_l2f_split.py  spottiswoode_comps.json  spottiswoode_nearby.json  spottiswoode_transactions.csv  spottiswoode_transactions.json  (+2 more)
(+535 files in other folders)
